fix scroll styles and icons

--- a/src/assets/sass/variables/_variables.colors.scss
+++ b/src/assets/sass/variables/_variables.colors.scss
@@ -12,7 +12,7 @@ $normal-gray-color: #7F7F7F !important;
 $normal-darker-gray-color: #7E7E7E !important;
 
 $dark-red-color: #8D1F16 !important;
-$accented-red-color: #DB3424 !important;
+$accented-red-color: #E04031 !important;
 
 $slider-base-dot-color: #D9D9D9 !important;
 $timeline-reel-color: #D9D9D9 !important;
@@ -27,8 +27,6 @@ $selected-arrow-filter-color: invert(87%) sepia(0%) saturate(479%)
   hue-rotate(143deg) brightness(95%) contrast(81%) !important;
 
 $card-scrollbar-track-color: #DEDCDC !important;
-$scrollbar-thumb-color: #891C1B !important;
-$scrollbar-track-color: #C9C5C2 !important;
 
 $modal-hover-color: #ECE9E9 !important;
 $burger-menu-color: #7F7F7F !important;
