--- a/src/app/common/components/ScrollToTopBtn/ScrollToTopBtn.styles.scss
+++ b/src/app/common/components/ScrollToTopBtn/ScrollToTopBtn.styles.scss
@@ -1,22 +1,25 @@
 @use "@sass/mixins/_utils.mixins.scss" as mut;
 @use "@sass/mixins/_vendor.mixins.scss" as vnd;
+@use "@sass/variables/_variables.colors.scss" as c;
 
 .scrollToTopBtnContainer {
   position: relative;
+  @include mut.flex-centered();
 
   .scrollToTopBt {
     @include mut.positioned-as(fixed, $bottom: 120px, $right: 140px);
-    @include mut.circular(50px, $color: none);
+    @include mut.circular(62px);
 
     @include vnd.vendored(animation, 'btnOpacity 1.5s ease-in-out');
     @include vnd.vendored(transition, 'filter .5s ease');
 
-    filter: brightness(50%);
-    z-index: 10;
+    border: 3px solid c.$accented-red-color;
+
+    z-index: 1000;
 
     &:hover {
       cursor: pointer;
-      filter: drop-shadow(.3rem .2rem 1.75rem crimson);
+      @include vnd.vendored(filter, 'drop-shadow(0 2px 15px rgba(61, 0, 0, .25))');
     }
   }
 }
