--- a/src/assets/sass/variables/_variables.colors.scss
+++ b/src/assets/sass/variables/_variables.colors.scss
@@ -25,9 +25,9 @@ $base-arrow-filter-color: invert(97%) sepia(66%) saturate(423%)
   hue-rotate(212deg) brightness(113%) contrast(90%) !important;
 $selected-arrow-filter-color: invert(87%) sepia(0%) saturate(479%)
   hue-rotate(143deg) brightness(95%) contrast(81%) !important;
+$hovered-btn-filter-color: drop-shadow(0 2px 15px rgba(61, 0, 0, .25)) !important;
 
 $card-scrollbar-track-color: #DEDCDC !important;
-
 $modal-hover-color: #ECE9E9 !important;
 $burger-menu-color: #7F7F7F !important;
 $ant-menu-color: #E13F30 !important;
