--- a/src/features/StreetcodePage/MapBlock/Map/Marker/Marker.styles.scss
+++ b/src/features/StreetcodePage/MapBlock/Map/Marker/Marker.styles.scss
@@ -1,7 +1,10 @@
+@use "@sass/mixins/_utils.mixins.scss" as mut;
+@use "@sass/_utils.functions.scss" as f;
+@use "@sass/variables/_variables.colors.scss" as c;
+
 .markerCircle{
-  width: 28px;
-  height: 28px;
-  background: white;
-  border: 4px solid #DB3424;
-  border-radius: 14px;
+  @include mut.sized(28px, 28px);
+  background: c.$pure-white-color;
+  border: 4px solid c.$accented-red-color;
+  border-radius: 50%;
 }
