remerge related figures

--- a/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigures.styles.scss
+++ b/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigures.styles.scss
@@ -15,6 +15,14 @@
 .smallWrapper {
     @include mut.sized($height: 605px);
 
+    .slick-track {
+        @include mut.rem-margined();
+
+        .slick-cloned {
+            display: none;
+        }
+    }
+
     .moreInfo {
         display: none;
     }
@@ -31,12 +39,14 @@
         p {
             @include mut.with-font($font-weight: 500, $font-size: 20px);
             line-height: f.pxToEm(25px);
-
+            text-decoration-line: none;
             color: c.$dark-red-color;
+
             cursor: pointer;
 
             &:hover {
                 text-decoration-line: underline;
+
                 filter: contrast(150%);
             }
         }
@@ -48,6 +58,20 @@
 
     .slick-arrow {
         top: f.pxToRem(213px);
+
+        filter: invert(79%) sepia(98%) saturate(1%) hue-rotate(356deg) brightness(101%) contrast(100%) !important;
+
+        &:hover:before {
+            filter: none !important;
+        }
+    }
+
+    .slick-disabled {
+        filter: none !important;
+        
+        &:before{
+            pointer-events: none !important;
+        }
     }
 
     .slick-list {
