Added base layout for chronology block according to client's requests.

--- a/src/features/StreetcodePage/TimelineBlock/TimelineItem/TimelineItem.styles.scss
+++ b/src/features/StreetcodePage/TimelineBlock/TimelineItem/TimelineItem.styles.scss
@@ -1,7 +1,7 @@
-@use "@assets/sass/mixins/_utils.mixins.scss" as mut;
-@use "@assets/sass/variables/_variables.colors.scss" as c;
-@use "@assets/sass/variables/_variables.fonts.scss" as ft;
-@use "@assets/sass/_utils.functions.scss" as f;
+@use "@sass/mixins/_utils.mixins.scss" as mut;
+@use "@sass/variables/_variables.colors.scss" as c;
+@use "@sass/variables/_variables.fonts.scss" as ft;
+@use "@sass/_utils.functions.scss" as f;
 
 $timelineItemImg: "@assets/images/TimelineItem.png";
 
