--- a/src/features/StreetcodePage/TimelineBlock/TimelineReelOutline/TimelineReelOutline.styles.scss
+++ b/src/features/StreetcodePage/TimelineBlock/TimelineReelOutline/TimelineReelOutline.styles.scss
@@ -1,12 +1,16 @@
-@use "@assets/sass/mixins/_utils.mixins.scss" as mut;
-@use "@assets/sass/variables/_variables.colors.scss" as c;
-@use "@assets/sass/_utils.functions.scss" as f;
+@use "@sass/mixins/_utils.mixins.scss" as mut;
+@use "@sass/variables/_variables.colors.scss" as c;
+@use "@sass/_utils.functions.scss" as f;
 
 .timelineSquareContainer {
   @include mut.flexed($justify-content: center, $gap: 36px);
 
   &:first-child {
     padding-top: f.pxToRem(16px);
+  }
+
+  &:last-child {
+    padding-bottom: f.pxToRem(16px);
   }
 
   .timelineSquare {
