--- a/src/app/common/components/modals/RelatedFigures/RelatedFiguresModal.styles.scss
+++ b/src/app/common/components/modals/RelatedFigures/RelatedFiguresModal.styles.scss
@@ -45,11 +45,12 @@ $articlesImg: "@assets/images/sources/Articles.png";
 }
 
 .relatedFiguresContentContainer {
-  height: pxToRem(571px);
+  height: pxToRem(598px);
   @include mut.flexed($direction: row, $gap: 30px, $wrap: wrap);
 
   overflow-y: scroll;
-  @include mut.rem-margined(30px, 21px, 0, 53px);
+  @include mut.rem-margined(0, 21px, 0, 53px);
+  @include mut.rem-padded(30px, 0, 30px, 0);
 
   .relatedFigureSlide{
     @include mut.sized($width: 278px, $height: 452px);
@@ -78,6 +79,6 @@ $articlesImg: "@assets/images/sources/Articles.png";
 
   &::-webkit-scrollbar-track {
     background: c.$accented-gray-color;
-    @include mut.rem-margined($top: -15px, $bottom: 90px);
+    @include mut.rem-margined($top: 37px, $bottom: 90px);
   }
 }
