--- a/src/features/StreetcodePage/MapBlock/Radio/Radio.styles.scss
+++ b/src/features/StreetcodePage/MapBlock/Radio/Radio.styles.scss
@@ -5,11 +5,12 @@
 
 .radioContainer{
   @include mut.sized(257px,148px);
-  @include mut.positioned-as(absolute, 0, 0, 0, 0);
+  @include mut.positioned-as(absolute, 195px, 0, 0, 1143px);
   @include mut.flexed(row, center, center);
   z-index: 2;
   background: white;
-  border: 3px solid c.$accented-red-color;
+  border: 3px solid #787878;
+  box-shadow: 0px 7px 11px 2px rgba(0, 0, 0, 0.25);
   border-radius: 23px;
 }
 
@@ -26,25 +27,25 @@
   text-align: center;
   color: c.$normal-darker-gray-color;
 }
-.ant-radio{
+.ant-checkbox{
   width: 25px;
   height: 25px;
 }
 
-.ant-radio-inner{
+.ant-checkbox-inner{
   width: 25px !important;
   height: 25px !important;
   border: 3px solid #7E7E7E !important;
 }
-.ant-radio-checked{
-  .ant-radio-inner{
+.ant-checkbox-checked{
+  .ant-checkbox-inner{
     border: 3px solid #DB3424 !important;
   }
 }
 
-:where(.css-dev-only-do-not-override-26rdvq).ant-radio-wrapper .ant-radio-checked .ant-radio-inner::after{
+:where(.css-dev-only-do-not-override-26rdvq).ant-checkbox-wrapper .ant-checkbox-checked .ant-checkbox-inner::after{
   opacity: 0;
 }
-:where(.css-dev-only-do-not-override-26rdvq).ant-radio-wrapper .ant-radio-checked .ant-radio-inner{
+:where(.css-dev-only-do-not-override-26rdvq).ant-checkbox-wrapper .ant-checkbox-checked .ant-checkbox-inner{
   background: radial-gradient(#DB3424 45%, white 55%) !important;
 }
