--- a/src/features/ProgressBar/ProgressBar.styles.scss
+++ b/src/features/ProgressBar/ProgressBar.styles.scss
@@ -11,7 +11,7 @@
 
 .progressBarContainer {
   @include mut.sized(74px, 43px);
-  @include mut.positioned-as(fixed, $bottom: 0, $left: 60px);
+  @include mut.positioned-as(fixed, $bottom: 0, $left: 124px);
 
   @include mut.flex-centered();
   border-top-left-radius: 20px;
@@ -39,7 +39,7 @@
     @include vnd.vendored(transform, 'translateY(300px)');
 
     &.visible {
-      @include vnd.vendored(transform, 'translateY(-300px)');
+      @include vnd.vendored(transform, 'translateY(calc(-50vh + 21.5px))');
     }
   }
 
