--- a/src/features/StreetcodePage/MapBlock/Statistics/Statistics.styles.scss
+++ b/src/features/StreetcodePage/MapBlock/Statistics/Statistics.styles.scss
@@ -7,7 +7,7 @@
   @include mut.sized(428px, 262px);
   @include mut.positioned-as(absolute, 636px, 0, 0, 150px);
   @include mut.rem-padded(5px, 5px, 5px, 5px);
-  background: white;
+  background: c.$pure-white-color;
   z-index: 2;
   border: 3px solid #787878;
   box-shadow: 0px 7px 11px 2px rgba(0, 0, 0, 0.25);
@@ -16,7 +16,7 @@
   h1{
     @include mut.with-font(ft.$roboto-font, 500, 22px, normal);
     line-height: 26px;
-    padding: 10px;
+    @include mut.rem-padded(20px, 20px, 0, 20px);
     color: c.$accented-red-color;
   }
 
@@ -29,7 +29,7 @@
       @include mut.with-font(ft.$roboto-font, 300, 20px, normal);
       line-height: 134.19%;
       color: c.$lighter-black-color;
-      padding-left: 10px;
+      padding-left: f.pxToRem(20px);
     }
     span{
       @include mut.with-font($font-weight:500, $font-size:22px);
