--- a/src/features/StreetcodePage/ArtGallery/ArtGalleryItem/ArtGalleryItem.styles.scss
+++ b/src/features/StreetcodePage/ArtGallery/ArtGalleryItem/ArtGalleryItem.styles.scss
@@ -23,7 +23,7 @@
   border-bottom-left-radius: 30px;
   padding: 11px 21px;
 } 
-.img_wrap:hover .img_data {
+.img_wrap:hover .img_data-full {
   visibility: visible;
   opacity: 1;
 }
