--- a/src/features/StreetcodePage/SourcesBlock/Sources.styles.scss
+++ b/src/features/StreetcodePage/SourcesBlock/Sources.styles.scss
@@ -27,6 +27,10 @@
     }
 
     .sliderClass {
+        .slick-list {
+            @include mut.rem-padded($bottom: 4px);
+        }
+        
         .slick-track {
             @include mut.flex-centered($gap: 30px);
         }
