--- a/src/app/common/components/modals/RelatedFigures/RelatedFiguresModal.styles.scss
+++ b/src/app/common/components/modals/RelatedFigures/RelatedFiguresModal.styles.scss
@@ -50,7 +50,7 @@ $articlesImg: "@assets/images/sources/Articles.png";
 
   overflow-y: scroll;
   @include mut.rem-margined(0, 21px, 0, 53px);
-  @include mut.rem-padded(30px, 0, 30px, 0);
+  @include mut.rem-padded(30px, 0, 30px, 3px);
 
   .relatedFigureSlide{
     @include mut.sized($width: 278px, $height: 452px);
