--- a/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigureItem/RelatedFigureItem.styles.scss
+++ b/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigureItem/RelatedFigureItem.styles.scss
@@ -9,7 +9,7 @@
     @include mut.full-rounded($rad: 30px);
 
     border: 3px solid c.$pure-white-color;
-    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     background-size: 100%;
     background-repeat: no-repeat;
 
@@ -30,11 +30,11 @@
         @include vnd.vendored(transition, 'all .5s ease');
 
         .heading {
-            @include mut.sized($width: 100%, $height: 79px);
+            @include mut.sized($width: 100%, $height: 88px);
             @include mut.flexed($align-items: center);
-            @include mut.rem-padded($left: 13px, $right: 13px, $top: 10px);
+            @include mut.rem-padded($left: 12px, $right: 12px, $top: 10px);
 
-            @include mut.with-font($font-family: "Closer Text", $font-size: 20px, $font-weight: 500);
+            @include mut.with-font($font-family: f.$closer-text-font, $font-size: 20px, $font-weight: 500);
             line-height: pxToRem(26.4px);
             text-align: center;
             color: c.$pure-white-color;
@@ -46,16 +46,16 @@
     @include mut.sized($width: 100%);
     visibility: hidden;
 
-    @include mut.flexed($align-items: center, $gap: 5px);
+    @include mut.flexed($align-items: center, $gap: 5px, $wrap: wrap);
     @include mut.rem-padded($top: 7px, $left: 23px, $right: 23px);
 
     .tag {
         @include mut.sized($height: 28px);
         @include mut.flex-centered();
 
-        border: 2px solid c.$pure-white-color;
+        border: 1.5px solid c.$pure-white-color;
         @include mut.full-rounded($rad: 7.86px);
-        @include mut.rem-padded($left: 11px, $top: 7px, $right: 11px, $bottom: 7px);
+        @include mut.rem-padded($left: 9.5px, $top: 5.5px, $right: 9.5px, $bottom: 5.5px);
 
         p {
             @include mut.sized($height: 14px);
