Added progress bar collapsing event after 10s timeout.

--- a/src/features/ProgressBar/ProgressBar.styles.scss
+++ b/src/features/ProgressBar/ProgressBar.styles.scss
@@ -12,6 +12,7 @@
 .progressBarContainer {
   @include mut.sized(74px, 43px);
   @include mut.positioned-as(fixed, $bottom: 0, $left: 57px);
+  // @include mut.positioned-as(fixed, $bottom: 0, $left: 120px);
 
   @include mut.flex-centered();
   border-top-left-radius: 20px;
