Fixed bugs for art gallery

--- a/src/features/StreetcodePage/ArtGallery/ArtGallery.styles.scss
+++ b/src/features/StreetcodePage/ArtGallery/ArtGallery.styles.scss
@@ -5,7 +5,7 @@
 @use "@sass/mixins/_vendor.mixins.scss" as vnd;
 
 .artGallerySliderContainer .sliderClass .slick-slider {
-    height: 560px !important;
+    height: pxToRem(560px);
 }
 .artGalleryWrapper {
     @include wr.main-page-block-wrapper();
