--- a/src/features/StreetcodePage/TimelineBlock/TimelineItem/TimelineItem.styles.scss
+++ b/src/features/StreetcodePage/TimelineBlock/TimelineItem/TimelineItem.styles.scss
@@ -21,14 +21,21 @@
   margin: f.pxToRem(24px) f.pxToRem(26px);
 
   .timelineItemDate {
-    margin-bottom: f.pxToRem(27px);
+    margin-bottom: 5px;
     @include mut.with-font($font-weight: 600);
     color: c.$darker-gray-color;
   }
 
+  .timelineItemHistoricalContexts {
+    .historicalContext {
+      @include mut.with-font($font-weight: 600);
+      color: c.$darker-gray-color;
+    }
+  }
+
   .timelineItemTitle {
-    margin-bottom: f.pxToRem(22px);
-    @include mut.with-font($font-weight: 600, $font-size: 36px);
+    @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 600, $font-size: 36px);
+    line-height: 48px;
     color: c.$dark-red-color;
   }
 
