--- a/src/features/StreetcodePage/TimelineBlock/TimelineBlock.styles.scss
+++ b/src/features/StreetcodePage/TimelineBlock/TimelineBlock.styles.scss
@@ -12,7 +12,7 @@ $timelineSquareImg: "@assets/images/timeline/Square.png";
   background-color: c.$timeline-reel-color;
 
   .sliderClass {
-    height: f.pxToRem(380px);
+    @include mut.sized(100%, 380px);
     @include mut.rem-margined($bottom: 25px, $top: 20px /*30px*/);
   }
 
@@ -35,6 +35,7 @@ $timelineSquareImg: "@assets/images/timeline/Square.png";
     .slick-slide {
       @include mut.sized(604px, 366px);
       @include mut.full-rounded(30px);
+      flex-shrink: 0;
 
       @include mut.bg-image($timelineSquareImg);
       background-position-y: f.pxToRem(-100px);
@@ -49,11 +50,11 @@ $timelineSquareImg: "@assets/images/timeline/Square.png";
     }
 
     .slick-center {
-      border: 4px solid c.$pure-white-color;
+      border: 4px inset c.$pure-white-color;
 
       .timelineItemContent {
         margin-top: calc(1.5rem - 4px);
-        margin-left: calc(1.5rem - 4px);
+        // margin-left: calc(1.5rem - 4px);
       }
     }
   }
