add hiding undefined elements

--- a/src/features/StreetcodePage/PartnersBlock/PartnerItem/PartnerContent/PartnerContent.styles.scss
+++ b/src/features/StreetcodePage/PartnersBlock/PartnerItem/PartnerContent/PartnerContent.styles.scss
@@ -26,6 +26,10 @@
 
 .links {
     @include mut.flexed($gap: 14px);
+
+    .mainLink {
+        @include mut.truncated($line-num: 1);
+    }
 }
 
 .sourceLinks {
