--- a/src/app/common/components/modals/RelatedFigures/RelatedFiguresModal.styles.scss
+++ b/src/app/common/components/modals/RelatedFigures/RelatedFiguresModal.styles.scss
@@ -52,14 +52,22 @@ $articlesImg: "@assets/images/sources/Articles.png";
   @include mut.rem-margined(0, 21px, 0, 53px);
   @include mut.rem-padded(30px, 0, 30px, 3px);
 
-  .relatedFigureSlide{
-    @include mut.sized($width: 278px, $height: 452px);
+  .relatedFigureSlide {
+    @include mut.sized($width: 278px, $height: 380px);
+
+    .slideText {
+        @include mut.sized($width: 272px, $height: 97px);
+    }
+  }
+
+  .relatedFigureSlide:hover {
+    @include mut.sized($width: 278px, $height: 380px);
 
     .slideText{
-        @include mut.sized($width: 272px, $height: 169px);
+        @include mut.sized($width: 272px, $height: 97px);
 
         .relatedTagList {
-            visibility: visible;
+            visibility: hidden;
         }
     }
   }
