--- a/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigureItem/RelatedFigureItem.styles.scss
+++ b/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigureItem/RelatedFigureItem.styles.scss
@@ -31,7 +31,8 @@
 
         .heading {
             @include mut.sized($width: 100%, $height: 88px);
-            @include mut.flexed($align-items: center);
+
+            @include mut.flex-centered();
             @include mut.rem-padded($left: 12px, $right: 12px, $top: 10px);
 
             @include mut.with-font($font-family: f.$closer-text-font, $font-size: 20px, $font-weight: 500);
