--- a/src/features/StreetcodePage/MapBlock/CheckBox/CheckBox.styles.scss
+++ b/src/features/StreetcodePage/MapBlock/CheckBox/CheckBox.styles.scss
@@ -8,7 +8,7 @@
   @include mut.positioned-as(absolute, 195px, 0, 0, 1143px);
   @include mut.flexed(row, center, center);
   z-index: 2;
-  background: white;
+  background: c.$pure-white-color;
   border: 3px solid #787878;
   box-shadow: 0px 7px 11px 2px rgba(0, 0, 0, 0.25);
   border-radius: 23px;
@@ -28,8 +28,7 @@
   color: c.$normal-darker-gray-color;
 }
 .ant-checkbox{
-  width: 25px;
-  height: 25px;
+  @include mut.sized(25px, 25px);
 }
 
 .ant-checkbox-inner{
@@ -43,9 +42,10 @@
   }
 }
 
-:where(.css-dev-only-do-not-override-26rdvq).ant-checkbox-wrapper .ant-checkbox-checked .ant-checkbox-inner::after{
+.ant-checkbox-wrapper .ant-checkbox-checked .ant-checkbox-inner::after{
   opacity: 0;
 }
-:where(.css-dev-only-do-not-override-26rdvq).ant-checkbox-wrapper .ant-checkbox-checked .ant-checkbox-inner{
-  background: radial-gradient(#DB3424 45%, white 55%) !important;
+.ant-checkbox-wrapper .ant-checkbox-checked .ant-checkbox-inner{
+  background: red !important;
+  box-shadow: inset 0 0 0 2px white !important;
 }
